--- a/home.html
+++ b/home.html
@@ -1,2 +1,25 @@
-<div>Hello World</div>
-<p>hello there</p>
+<html>
+<title>my first web page</title>
+<link rel="stylesheet" href="home.css"></link>
+</head>
+
+<body>
+<nav class="navbar">
+    <ul class="nav-left">
+        <li>home</li>
+        <li>about</li>
+        <li>contact</li>
+    </ul>
+    <ul class="nav-right">
+        <li>sign in</li>
+        <li>join</li>
+    </ul>
+</nav>
+<div class="container-horizontal">
+    <div class="container__left"><img src="./assets/image.png"/></div>
+    <div class="container__right"><img src="./assets/image.png"/></div>
+</div>
+</body>
+
+</html>
+
