learnt forms, swiggy

--- a/temp.html
+++ b/temp.html
@@ -41,6 +41,17 @@
             
             <!-- <section>abcde</section> -->
         </article>
+
+        <section class="_flexbox">
+            <h1>Flex grow, flex shrink, flex basis</h1>
+
+            <div class="flex-container">
+                <div class="flex-container__box1">1</div>
+                <div class="flex-container__box2">2</div>
+                <div class="flex-container__box3">3</div>
+            </div>
+
+        </section>
     </main>
     <footer>@copyright 2021</footer>
 
