--- a/position.html
+++ b/position.html
@@ -9,6 +9,10 @@
 </head>
 <body>
     <section class="grid-section">
+        <!-- <section class="grid2-section">
+            <div class="box4"></div>
+            <div class="box2"></div>
+        </section> -->
     <div class="box1"></div>
     <div class="box2"></div>
     <div class="box3"></div>
