--- a/transitions/transitions.html
+++ b/transitions/transitions.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <div class="ball"></div>
+    <div class="box"></div>
+     <div class="box2"></div>
     <script src="index.js"></script>
 </body>
 </html>
