--- a/animations/animations.html
+++ b/animations/animations.html
@@ -8,8 +8,13 @@
     <link rel="stylesheet" href="animations.css" type="text/css">
 </head>
 <body>
-    <div class=string-top></div>
+    <!-- <div class=string-top></div>
     <div class=string-bottom></div>
-    <div class="anime"></div>
+    <div class="anime"></div> -->
+        <section class="box-container">
+    <div class=box></div>
+    </section>
+    <!-- <div class=string-bottom></div>
+    <div class="anime"></div> -->
 </body>
 </html>
