learned about control flows and funcions

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +6,24 @@
     <title>Learning JS</title>
 </head>
 <body>
-    
+    <!-- <input class="check" type="checkbox" name="terms"  /> -->
+    <select class="select-fruits"  name="fruits">
+        <option value="apple">Apple</option>
+        <option value="banana">Banana</option>
+        <option value ="orange">Orange</option>
+    </select>
+
+    <select class="select-cars"  name="cars">
+        <option value="BMW">BMW</option>
+        <option value="Audi">Audi</option>
+        <option value ="Ferrari">Ferrari</option>
+    </select>
+
+    <select class="select-colours"  name="colours">
+        <option value="yellow">yellow</option>
+        <option value="blue">blue</option>
+        <option value ="red">red</option>
+    </select>
 </body>
 <script src="sandbox.js">
     // Variables->let, const, var
@@ -28,4 +44,6 @@
     // Symbol-> this is generally used with object
 
 </script>
+<script src="control-flow.js"></script>
+<script src="functions.js"></script>
 </html>
