learned onjects,scope

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <option value ="red">red</option>
     </select>
 </body>
-<script src="sandbox.js">
+<!-- <script src="sandbox.js">
     // Variables->let, const, var
     // let num = 5;
     // const _add = 20;
@@ -44,6 +44,7 @@
     // Symbol-> this is generally used with object
 
 </script>
-<script src="control-flow.js"></script>
-<script src="functions.js"></script>
+<script src="control-flow.js"></script>-->
+<script src="functions.js"></script> 
+<script src="object.js"></script>
 </html>
