--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 </head>
 <body>
     <!-- <input class="check" type="checkbox" name="terms"  /> -->
-    <select class="select-fruits"  name="fruits">
+    <!-- <select class="select-fruits"  name="fruits">
         <option value="apple">Apple</option>
         <option value="banana">Banana</option>
         <option value ="orange">Orange</option>
     </select>
 
-    <select class="select-cars"  name="cars">
-        <option value="BMW">BMW</option>
+    <select class="select-cars abc bcd efg"  name="cars">
+        <option id="bmw" value="BMW">BMW</option>
         <option value="Audi">Audi</option>
         <option value ="Ferrari">Ferrari</option>
     </select>
@@ -23,7 +23,12 @@
         <option value="yellow">yellow</option>
         <option value="blue">blue</option>
         <option value ="red">red</option>
-    </select>
+    </select> -->
+
+    <P>Counter</P>
+    <div id=number>0</div>
+    <button id="increment">increment</button>
+    <button id="decrement">decrement</button>
 </body>
 <!-- <script src="sandbox.js">
     // Variables->let, const, var
@@ -45,6 +50,7 @@
 
 </script>
 <script src="control-flow.js"></script>-->
-<script src="functions.js"></script> 
-<script src="object.js"></script>
+<!-- <script src="functions.js"></script> 
+<script src="object.js"></script> -->
+<script src="dom.js"></script>
 </html>
