--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 </script>
 <script src="control-flow.js"></script>-->
-<!-- <script src="functions.js"></script> 
-<script src="object.js"></script> -->
-<script src="dom.js"></script>
+<!-- <script src="functions.js"></script>  -->
+<script src="object.js"></script>
+<!-- <script src="dom.js"></script> -->
 </html>
